objects/tffa__CollateralArrangement__c.object
<CustomObject>
    <description>An arrangement between a collateral provider and a collateral taker to use collateral to secure an obligation. Collateral arrangements may include criteria for the eligibility of assets and haircuts and may take different legal forms such as by title transfer or pledge arrangements.</description>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to application.</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Collateral Arrangement</relationshipLabel>
        <relationshipName>CollateralArrangements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ChargeType__c</fullName>
        <description>Indicates the charge type on the collateral</description>
        <label>Charge type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CollateralChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Description of the collateral</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <description>End date of the arrangement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExposureType__c</fullName>
        <description>Indicate the Collateral Exposure Type</description>
        <label>Exposure type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CollateralExposureType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__GraceDays__c</fullName>
        <description>Indicates the grace days for the next due/revision date</description>
        <label>Grace days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Haircut__c</fullName>
        <description>Specify the bank’s margin (Haircut) to be assigned for Collateral.</description>
        <label>Haircut</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__IsChargeRegistrationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the charge registration is required</description>
        <label>Is charge registration required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Margin__c</fullName>
        <description>Lendable margin changes because of revaluation on account of change in haircut or on changing the Haircut directly</description>
        <label>Margin</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfUnits__c</fullName>
        <description>Number of units considered in the arrangement</description>
        <label>Number of units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <description>Start date of the arrangement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Indicates the Collateral arrangement status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CollateralArrangementStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Captures different type of the collateral supported in the system</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CollateralType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ValuationAmount__c</fullName>
        <description>Valuation amount of the collateral arrangement</description>
        <label>Valuation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ValuationDate__c</fullName>
        <description>Valuation date of the collateral</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Valuation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ValuationSource__c</fullName>
        <description>Valuation source of the collateral</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Valuation source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Collateral Arrangement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Arrangement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral Arrangements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>